# pod5-random-access

./: .gitignore  .gitmodules  BUILD_ORGANIZATION.md  BUILD_WHEELS.md  BUILD_WINDOWS.md  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  build_manylinux.sh  build_wheel.py  build_wheel_windows.py  build_windows.bat  pyproject.toml  setup.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: CI.yml
build_scripts/: build_windows.ps1  generate_cmake_presets.py
pod5_random_access/: __init__.py  build.py  pod5_random_access_pybind.pyi  reader.py
src/: CMakeLists.txt  pod5_signal_index.cpp  py_pod5.cpp
src/include/: pod5_signal_index.hpp
tests/: conftest.py  test_build.py  test_build_pod5_index.py  test_plan_fetch_order.py  test_reader.py
tests/data/pod5_dir/: test_data.pod5
