[project]
name = "pod5-random-access"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["setuptools>=45", "wheel", "pybind11[global]>=2.10.0"]
build-backend = "setuptools.build_meta"