[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pod5-random-access"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=2.2.6", "pyyaml>=6.0.2"]

[tool.setuptools]
packages = ["pod5_random_access"]
include-package-data = true       # MANIFEST.in
